--- a/activityservices/src/main/resources/application.yml
+++ b/activityservices/src/main/resources/application.yml
@@ -2,5 +2,5 @@ spring:
   application:
     name: activity-service
   config:
-    import: optional:configserver:http://localhost:8888
+    import:  optional:configserver:http://configserver:8888
 
