--- a/configserver/src/main/resources/config/activity-service.yml
+++ b/configserver/src/main/resources/config/activity-service.yml
@@ -1,28 +1,28 @@
-server:
-  port: 8082
-
 spring:
   application:
     name: activity-service
   data:
     mongodb:
-      uri: mongodb://localhost:27017/fitnessactivity
+      uri: mongodb://root:password@mongodb:27017/fitnessactivity?authSource=admin
       database: fitnessactivity
     rabbitmq:
-      host: localhost
+      host: rabbitmq
       port: 5672
-      username: guest
-      password: guest
+      username: rabbit
+      password: rabbitpass
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
 
 rabbitmq:
   exchange:
-    name: fitness.exchange
+    name: activity.exchange
   queue:
     name: activity.queue
   routing:
     key: activity.tracking
+
+server:
+  port: 8082
