--- a/configserver/src/main/resources/config/api-gateway.yml
+++ b/configserver/src/main/resources/config/api-gateway.yml
@@ -3,32 +3,31 @@ spring:
     name: api-gateway
   security:
     oauth2:
-      resourceserver:
+      resource-server:
         jwt:
-          jwk-set-uri: http://127.0.0.1:8181/realms/fitness-oauth2/protocol/openid-connect/certs
+          jwk-set-uri: http://keycloak:8080/realms/fitness-oauth2/protocol/openid-connect/certs
   cloud:
     gateway:
       routes:
         - id: user-service
-          uri: lb://USER-SERVICE
+          uri: lb://user-service
           predicates:
             - Path=/api/users/**
 
         - id: activity-service
-          uri: lb://ACTIVITY-SERVICE
+          uri: lb://activity-service
           predicates:
             - Path=/api/activities/**
 
         - id: ai-service
-          uri: lb://AI-SERVICE
+          uri: lb://ai-service
           predicates:
-           - Path=/api/recommendations/**
-
-server:
-  port: 8080
+            - Path=/api/recommendations/**
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
 
+server:
+  port: 8080
